crates/ruff/src/snapshots/ruff__noqa__tests__flake8_exemption_all.snap
---
source: crates/ruff/src/noqa.rs
expression: "ParsedFileExemption::try_extract(source)"
---
Ok(
    Some(
        All,
    ),
)
