crates/ruff/src/snapshots/ruff__noqa__tests__flake8_exemption_codes.snap
---
source: crates/ruff/src/noqa.rs
expression: "ParsedFileExemption::try_extract(source)"
---
Err(
    UnsupportedCodes,
)
