crates/ruff/src/snapshots/ruff__noqa__tests__noqa.snap
---
source: crates/ruff/src/noqa.rs
expression: "Directive::parse(range, &locator)"
---
Codes(
    Codes {
        leading_space_len: 0,
        noqa_range: 0..1,
        trailing_space_len: 11,
        codes: [
            "F401",
        ],
    },
)
