crates/ruff/src/snapshots/ruff__noqa__tests__noqa_all.snap
---
source: crates/ruff/src/noqa.rs
expression: "Directive::try_extract(range, &locator)"
---
Some(
    All(
        All {
            range: 0..6,
        },
    ),
)
