crates/ruff/src/snapshots/ruff__noqa__tests__noqa_all_case_insensitive.snap
---
source: crates/ruff/src/noqa.rs
expression: "Directive::extract(range, &locator)"
---
Some(
    All(
        All {
            leading_space_len: 0,
            noqa_range: 0..6,
            trailing_space_len: 0,
        },
    ),
)
