crates/ruff/src/snapshots/ruff__noqa__tests__noqa_all_trailing_comment.snap
---
source: crates/ruff/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
---
Some(
    All(
        All {
            range: 0..6,
        },
    ),
)
