crates/ruff/src/snapshots/ruff__noqa__tests__noqa_code.snap
---
source: crates/ruff/src/noqa.rs
expression: "Directive::extract(range, &locator)"
---
Codes(
    Codes {
        leading_space_len: 0,
        noqa_range: 0..12,
        trailing_space_len: 0,
        codes: [
            "F401",
        ],
    },
)
