crates/ruff/src/snapshots/ruff__noqa__tests__noqa_code_leading_comment.snap
---
source: crates/ruff/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
---
Some(
    Codes(
        Codes {
            range: 35..47,
            codes: [
                "F401",
            ],
        },
    ),
)
