crates/ruff/src/snapshots/ruff__noqa__tests__noqa_code_multi_space.snap
---
source: crates/ruff/src/noqa.rs
expression: "Directive::try_extract(source, TextSize::default())"
---
Some(
    Codes(
        Codes {
            range: 0..13,
            codes: [
                "F401",
            ],
        },
    ),
)
